# property-leads

./: .flake8  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: bcpao.py  identify_property_leads.py
src/property_leads/: __init__.py  __main__.py  bcpao.py
tests/: test_bcpao.py  test_utils.py
