[metadata]
name = property_leads
description = Gathers information and identifies suitable leads from tax lien and foreclosure auction properties
license = GNU GENERAL PUBLIC LICENSE

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src/property_leads
packages = find:
install_requires =
    aiohttp>=3.8.1
    pandas>=1.2.3

[options.entry_points]
console_scripts =
    property-leads = property_leads.__main__:main

[bdist_wheel]
universal = 1
